AH-2002-08-30-1  Bugfix:    solaris 32 bit: rlim_fd_max > 1024 can cause 32 bit 
                            daemons to crash at startup phase
                 Issue:     #371
                 Bugtraq:   #4739596
                 Changed:   sge_qmaster sge_execd sge_commd sge_schedd sge_shadowd

CR-2002-08-29-1  Bugfix:    corrected mistake in writing in debug messages
                            for localization
                 Changed:   All binaries using i18n

AA-2002-08-28-1  I18N:      version string and copyright strings for infotext
                 Review:    AS
                 Changed:   infotext

AA-2002-08-28-0  Bugfix:    OK without hostname in host_configuration kill sge_qmaster
                 Issues:    #370
                 Bugtraq:   #4732031
                 Review:    CR
                 Changed:   sge_qmaster

AH-2002-08-28-1  Doc:       man page typo for sge_aliases
                 Issue:     #347
                 Doc:       access_list(5) man page does not describe file format
                            for SGEEE mode
                 Issue:     #357
                 Doc:       Output of prolog/epilog for interactive jobs not
                            mentioned
                 Issue:     #367

SD-2002-08-23-1  Enhancem.  Updated MPI/Myrinet integration for latest release
                            of MPICH-GM.
                 Changed:   startmpi.sh, sge_mpirun

EB-2002-08-23-0  Bugfix:    scheduler crashes if defaultuser has 0 shares in 
                            sharetree
                 Issues:    #363
                 Bigtraq:   #4735972
                 Review:    AS
                 Changed:   sge_schedd

AA-2002-08-22-0  I18N:      bunch of fixes for l10n
                 Bugtraq:   #4733802, #4733201, #4733089, #4733043,
                            #4731976, #4731990, #4731967, #4731958,
                            #4731944, #4731935, #4731273, #4729700
