@@ -50,6 +50,7 @@ enum {
    OA_CKPT_SEL,
    OA_DATE_TIME,
    OA_DESTIN_ID_LIST,
+   OA_DESTIN_ID_LIST2,
    OA_HOLD_LIST,
    OA_HOST_ID_LIST,
    OA_JOB_ID_LIST,
