@@ -1,8 +1,15 @@
+EB-2002-09-02-0  Bugfix:    problems with destin_id_list syntax
+                 Issue:     #313
+                 Bugtraq:   #4740350
+                 Review:    AH
+                 Changed:   qsub, qalter, qsh
+
 AH-2002-08-30-1  Bugfix:    solaris 32 bit: rlim_fd_max > 1024 can cause 32 bit 
                             daemons to crash at startup phase
                  Issue:     #371
                  Bugtraq:   #4739596
-                 Changed:   sge_qmaster sge_execd sge_commd sge_schedd sge_shadowd
+                 Changed:   sge_qmaster sge_execd sge_commd sge_schedd 
+                            sge_shadowd
 
 CR-2002-08-29-1  Bugfix:    corrected mistake in writing in debug messages
                             for localization
@@ -12,7 +19,8 @@ AA-2002-08-28-1  I18N:      version string and copyright strings for infotext
                  Review:    AS
                  Changed:   infotext
 
-AA-2002-08-28-0  Bugfix:    OK without hostname in host_configuration kill sge_qmaster
+AA-2002-08-28-0  Bugfix:    OK without hostname in host_configuration kill 
+                            sge_qmaster
                  Issues:    #370
                  Bugtraq:   #4732031
                  Review:    CR
